upgrade to gatsby 4

--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -100,24 +100,21 @@ import videoMP4Slideshow from 'assets/video/criterion/slideshow.mp4'
 
 <Markdown>
 
-Since mid-2017, I've worked as a full stack developer helping to launch and maintain the first redesign of <Link to="https://criterion.com">criterion.com</Link> in over a decade.
+Between 2017 and 2018, I worked as a full stack developer helping to launch and maintain the first redesign of <Link to="https://criterion.com">criterion.com</Link> in over a decade.
 
 I was part of a small team contracted to pick up where a prior agency had left off, and inherited a beautifully-designed set of static front end templates and a partially completed back end build.
 
-We were hired to figure out what remained, create a transparent project management workflow that would shepherd the team through the process, and complete the outstanding development required for launch.
-
-We launched the new site in May, and have since been at work building and releasing new features each week.
+We were hired to figure out what remained, create a transparent project management workflow that would shepherd the team through the process, and complete the outstanding development required for launch. After the site launched in May 2018, we continued to build and release new features.
 
 ## My Role
 
-As work began, my largest responsibilities revolved around four areas:
+My largest responsibilities revolved around the following areas:
 
 - Interviewing the Criterion team to get a solid understanding of each department's workflows, gathering requirements and creating scopes for major features that hadn't shipped yet, and aligning expectations with stakeholders
 - Working with the previous development team to understand the project's architecture, technical decisions, and outstanding tasks
 - Planning and configuring our team's development workflow / deployment pipeline
 - Planning and executing a migration of the existing site's database content to the new site's updated structure
-
-In addition, I've shipped features over the last year including homepage CMS integration, high-traffic Flash Sale pages, order editing and cancellation, CSV reporting, v1 to v2 URL migrations, and a whole bunch of front end bug fixes and enhancements.
+- Shipping major features including homepage CMS integration, high-traffic Flash Sale pages, order editing and cancellation, CSV reporting, URL migrations, and a whole bunch of front end bug fixes and enhancements.
 
 </Markdown>
 
@@ -132,7 +129,7 @@ In addition, I've shipped features over the last year including homepage CMS int
 
 ## Trusting the Process
 
-While we've had our fair share of tricky technical puzzles, the heart of this project has been the team's effort to radically improve transparency and communication with the client stakeholders, something that was especially crucial given our role as the second development team to join the project.
+The heart of this project was the team's effort to radically improve the development process, transparency, and communication with the client stakeholders, something that was especially crucial given our role as the second development team to join the project.
 
 Scoping a project in motion is tricky. There's so much existing background, so many foundational decisions already made, and so much context that we can only understand as work progresses. In order to create accurate scopes, we'd need a system that allowed us to chart how much work we could complete in a given time period, identify and break up outstanding features into actionable tasks, and plan for the unexpected along the way.
 
