make stack section adapt colors based on theme

--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -73,9 +73,9 @@ import videoCriterionMP4Slideshow from 'assets/video/criterion/slideshow.mp4'
 
 </Gallery>
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>Laravel 5 (PHP 7) and PostgreSQL</p>
