--- a/src/content/work/design-systems.mdx
+++ b/src/content/work/design-systems.mdx
@@ -24,7 +24,7 @@ import imageDesktopDSRoxborough from 'assets/images/design-systems/desktop/roxbo
 import imageDesktopDSGreenProgram from 'assets/images/design-systems/desktop/greenprogram.jpg'
 import videoDSMP4Integrity from 'assets/video/design-systems/integrity-small.mp4'
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
 <Markdown>
 
@@ -32,7 +32,7 @@ import videoDSMP4Integrity from 'assets/video/design-systems/integrity-small.mp4
 
 </Markdown>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>
@@ -70,7 +70,7 @@ I've found this approach so productive and valuable that I've adopted it as a st
 
 </Markdown>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>
