--- a/src/content/work/national-geographic.mdx
+++ b/src/content/work/national-geographic.mdx
@@ -68,9 +68,9 @@ import imageStillNGJobs from 'assets/images/natgeo/still/jobs.jpg'
   </GalleryItem>
 </Gallery>
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>Django 1.0 Templating</p>
