--- a/src/content/work/product-development.mdx
+++ b/src/content/work/product-development.mdx
@@ -22,9 +22,9 @@ import imageStillProductV1Concept from 'assets/images/product/still/concept-v1.j
 import imageStillProductV1Menu from 'assets/images/product/still/concept-v1-menu.jpg'
 import videoProductMP4Interface from 'assets/video/product/v2-demo.mp4'
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>
