--- a/src/content/work/redds.mdx
+++ b/src/content/work/redds.mdx
@@ -64,9 +64,9 @@ import videoReddsStillTrailer from 'assets/video/redds/trailer.jpg'
   </GalleryItem>
 </Gallery>
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>MEAN: Node.js, MongoDB, Express, and Angular.js (1.0)</p>
