--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -81,9 +81,9 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 
 </Gallery>
 
-<PostColumn>
+<PostColumn theme={_frontmatter.background}>
 
-<Stack>
+<Stack theme={_frontmatter.background}>
   <List>
     <ListItem>
       <p>Illustrator, Sketch, Premiere Pro</p>
