--- a/src/content/work/national-geographic.mdx
+++ b/src/content/work/national-geographic.mdx
@@ -88,13 +88,19 @@ import imageStillNGJobs from 'assets/images/natgeo/still/jobs.jpg'
 
 In 2009, after a division-wide reorganization and with only a handful of production launches to my name, I was asked to lead the front-end development of National Geographic's upcoming site redesign.
 
-With the old site struggling under the weight of outdated standards, an expensive enterprise CMS, and a fragile deployment system, leadership set out to rebuild the entire stack in-house using open-source platforms.
+With the old site struggling under the weight of outdated standards, an expensive enterprise CMS, and a fragile deployment system, leadership set out to rebuild the entire stack in-house using the open-source Django framework.
 
 Over the course of a year, I worked alongside every team in the digital division to create an expressive new approach that would afford content producers freedom and flexibility in presenting their work, reduce development time for new features, dramatically increase site accessibility, and remain true to the design team's original vision.
 
 ## Approach
 
-Leveraging the power of Django's template inheritance model and Nicole Sullivan's brilliant <Link to="http://www.stubbornella.org/content/2009/02/28/object-oriented-css-grids-on-githu/">object-oriented approach to CSS</Link>, I created a highly modular framework capable of generating scores of different page layouts under a unified markup scheme. And prioritizing web standards compliance and progressive enhancement techniques ensured that we had a more semantic, search-friendly, and accessible site than ever before.
+Leveraging the power of Django's template inheritance model and Nicole Sullivan's brilliant <Link to="http://www.stubbornella.org/content/2009/02/28/object-oriented-css-grids-on-githu/">object-oriented approach to CSS</Link>, I created a series of UI components and page layouts used to generate scores of unique pages that prioritized web standards compliance and progressive enhancement techniques missing from our previous site.
+
+The result was a more visually consistent, semantic, search-friendly, and accessible site than ever before, and recognition including:
+
+- <Link to="https://www.adweek.com/brand-marketing/magazine-web-site-year-102953/">Adweek's 2010 Magazine Site of the Year</Link>
+- <Link to="http://content.time.com/time/specials/packages/article/0,28804,2012721_2012887_2012883,00.html">Time's 50 Best Websites of 2010</Link>
+- <Link to="https://youtu.be/zZtWlSDvb_k?t=873">Steve Jobs demonstrating nationalgeographic.com onstage during the 2010 iPad keynote</Link>
 
 </Markdown>
 
@@ -104,15 +110,5 @@ Leveraging the power of Django's template inheritance model and Nicole Sullivan'
     alt="Screenshot: A view of the custom layout manager powering the nationalgeographic.com homepage in 2010"
   />
 </Browser>
-
-<Markdown>
-
-## Recognition
-
-- <Link to="https://www.adweek.com/brand-marketing/magazine-web-site-year-102953/">Adweek's 2010 Magazine Site of the Year</Link>
-- <Link to="http://content.time.com/time/specials/packages/article/0,28804,2012721_2012887_2012883,00.html">Time's 50 Best Websites of 2010</Link>
-- <Link to="https://youtu.be/zZtWlSDvb_k?t=873">Steve Jobs visits nationalgeographic.com onstage during the 2010 iPad keynote</Link>
-
-</Markdown>
 
 </PostColumn>
