--- a/src/content/work/product-development.mdx
+++ b/src/content/work/product-development.mdx
@@ -64,7 +64,7 @@ The first phase of our product development cycle was centered around clearly def
 
 <Markdown>
 
-With this data in hand, we created lo-fidelity prototypes to kickstart a _build-measure-learn_ feedback loop with our colleagues, with the goal of validating the assumptions and success factors we developed prior.
+With data in hand, we created low-fidelity prototypes to kickstart a _build-measure-learn_ feedback loop with our colleagues to validate the assumptions and success factors we'd previously identified.
 
 </Markdown>
 
@@ -78,7 +78,7 @@ With this data in hand, we created lo-fidelity prototypes to kickstart a _build-
 
 ## MVP Development
 
-Once we were confident that we had a thorough understanding of the problem, the user base, and an initial product vision, we pitched company stakeholders on the idea of investing in a minimum viable product.
+Once we had a solid understanding of our problem, the user base, and an initial product vision, I pitched company stakeholders on the idea of investing in a minimum viable product.
 
 </Markdown>
 
@@ -90,7 +90,7 @@ Once we were confident that we had a thorough understanding of the problem, the 
 
 <Markdown>
 
-Following unanimous approval, a small team was assembled and we began building a lightweight data-collection API alongside a series of static interface mockups designed to quickly test interactive models with colleagues.
+Following unanimous approval, a small team was assembled and we began building a lightweight data-collection API alongside a series of interface prototypes designed to quickly test interactive models with colleagues.
 
 </Markdown>
 
@@ -109,13 +109,12 @@ Following unanimous approval, a small team was assembled and we began building a
 
 ## Sunset
 
-Unfortunately, the product team's progress was cut short, as the explosive growth of the company's client services required internal resources to shift focus indefinitely. Nonetheless, this was an invaluable experience, and one from which we took many lessons:
+Unfortunately, the product team's progress was cut short, as the explosive growth of the company's client services required internal resources to shift focus indefinitely. Nonetheless, this was an invaluable experience, and one from which I took many lessons:
 
 - We were validated early on by our peers (including successful product devs), who supported and encouraged our decision to use an internal accelerator as a product development model.
-- Early course-correction was a frequent occurrence—we set our own expectations around the volatile nature of early product work, and we didn't hesistate to tear down and pursue new directions when necessary.
+- Early course-correction was a frequent occurrence — we set our own expectations around the volatile nature of early product work, and we didn't hesistate to tear down and pursue new directions when necessary.
 - The ideas that came out of a rigorous research process routinely won support over those that didn't. We proved to ourselves that deep understanding of a problem space resulted in our strongest thinking, and we tested that idea through pitches, focus groups, and anonymous feedback.
-- Momentum was both the most powerful and the most underestimated force we encountered. When we had momentum, we did our best work, shipped quickly, and stayed excited, but when we lost momentum, faith in the product team suffered.
-
+- Momentum was both the most powerful and the most underestimated force we encountered. With buy-in from management and a consistently allocated team, we shipped quickly and made fast progress, but once we found ourselves routinely competing for resources inside the company, momentum slowed and rendered effective work difficult.
 </Markdown>
 
 </PostColumn>
