--- a/src/content/work/redds.mdx
+++ b/src/content/work/redds.mdx
@@ -85,7 +85,7 @@ import videoReddsStillTrailer from 'assets/video/redds/trailer.jpg'
 
 <Markdown>
 
-Designed as a two-week viral marketing campaign, the Redd's Apple Launcher was a browser-based game featuring an internet-controlled cannon that fired "apples" (read: red hockey balls) at live targets placed throughout a fake bar in a secret warehouse in northeast DC. I know.
+Designed as a two-week viral marketing campaign for MillerCoors, the Redd's Apple Launcher was a browser-based game featuring an internet-controlled cannon that fired "apples" (read: red hockey balls) at live targets placed throughout a fake bar in a secret warehouse in Washington, DC (...I know).
 
 Thousands of players competed in real time for a chance to control the cannon using an FPS-style interface on the Redd's website, while onlookers watched the action via 3 live-streaming camera feeds. If a player managed to hit one of 50 special targets throughout the bar, a switch triggered a random prize selection that was fulfilled directly in-browser via a third party API.
 
@@ -97,17 +97,19 @@ I led the front and backend web teams on this project, which means I was respons
 
 This was easily the most intense and challenging project I've ever worked on. Every step involved tools we'd never used before, at a scale we'd never experienced, using technology that didn't exist a year or two prior. All of it backed by a massive marketing campaign on an inflexible deadline.
 
-I could fill a book with the things I learned leading this project, but over time I continually return to what now feels like its singular lesson: while we had no idea what the path would look like, we knew it was possible to figure it out together.
-
 Without a roadmap to guide us, we started small and built on each victory. Early prototypes graduated to production-level APIs, browser demos collected features until the entire office could compete against each other, and gameplay was adjusted until the minute the production stream began.
 
 ### Hurdles
 
-Coordinating so many moving parts at once led to one of the most challenging aspects of this project — discovering fundamental limitations after having committed to our approach and the techonology powering it.
+Coordinating so many moving parts at once led to one of the most challenging aspects of this project — adapting on the fly as we discovered fundamental limitations of our approach.
 
-Lag was a prime example. Livestreaming partners had to be lined up early in the project's lifecycle, and our team was assured that the platform's lag time would be a couple seconds at most. After designing the gameplay accordingly, we discovered a few weeks later during testing that the actual lag time was anywhere from five seconds to a full minute, instantly rendering weeks of work unusable.
+Lag was a prime example — livestreaming partners had to be lined up early in the project's lifecycle, and our team was assured that the platform's lag time would be a couple seconds at most.
 
-With time bearing down we couldn't afford a full refactor of the game mechanics, so the team had 24 hours to design and test a new approach that could keep the project afloat. Huddled together, we devised a queue-based system, where players would position each of their shots using the existing interface, and trigger the cannon to fire them off in sequence. We padded the time between gameplay elements to keep any of the action from going too far out of sync with the video, and had a working prototype running the next day.
+After designing the gameplay accordingly, we discovered during testing that the actual lag time was anywhere from five seconds to a full minute, instantly rendering weeks of work unusable.
+
+With the event deadline looming, we couldn't afford a full refactor of the game mechanics, and were left with 24 hours to design and test a new approach that could keep the project afloat.
+
+After identifying the inflexible elements of the game, and working within a set of limitations that would allow us to prototype quickly, we devised a queue-based system. Players would position each of their shots using the existing interface, and trigger the cannon to fire them off in sequence. We then padded the time between gameplay elements to keep any of the action from going too far out of sync with the video, and had a testable version running the next day.
 
 </Markdown>
 
@@ -121,7 +123,11 @@ With time bearing down we couldn't afford a full refactor of the game mechanics,
 
 Server scalability was another major challenge. Since this was designed as a viral marketing campaign, the strategy team's job was to direct as many people to the site as possible for as long as possible, which meant we needed to be prepared to scale the application for large, sustained bursts of traffic.
 
-We split the app into 4 components, each of which could be replicated across multiple servers: one in charge of the realtime event handling, one in charge of site and session logic, one in charge of the database, one in charge of ephemeral global game state.
+We split the app into 4 components, three of which could be scaled up and down across multiple servers:
+- realtime event handling (Socket.io)
+- site and session logic (Express/Node.js)
+- database (PostgreSQL)
+- global game state (generated by Angular, stored in Redis)
 
 Recognizing this as an opportunity to improve our own server provisioning process, we were able to roll this internal need into the scope of a client project, which became a regular strategy in subsequent engagements.
 
