copy update to rp

--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -185,7 +185,7 @@ The second version of <Link to="https://remedyplan.com/">remedyplan.com</Link>, 
 
 Our primary goal was to immediately communicate the state of Remedy Plan's tremendous progress in a manner that was consistent with industry expectations, while also positioning the company as an energetic, novel, and forward-thinking organization with serious credibility.
 
-As of 2022, Remedy Plan has raised $10.1M in Series A funding and is nearing clinical trials with a promising lead drug candidate.
+As of 2022, Remedy Plan has raised $10.1M in Series A funding, is currently pursuing a Series B, and is nearing clinical trials with a promising lead drug candidate.
 
 </Markdown>
 
